<resources>
    <string name="app_name">BlueGrape</string>
    <string name="my_wallpaper">我的壁纸</string>
    <string name="current_wallpaper">当前使用的壁纸</string>
    <string name="about_this_software">关于本软件</string>
    <string name="pause_running">暂停运行</string>
    <string name="continue_running">继续运行</string>
    <string name="stop_running">停止运行</string>
    <string name="main_page_text">BlueGrape使用“无障碍”权限检测当前运行的应用程序以决定播放何种壁纸，但这是一个较为高级的权限，Android系统可能会时不时关闭它。当权限关闭时，BlueGrape会弹出弹窗。不便之处，敬请谅解。</string>
    <string name="new_wallpaper">新建图片壁纸</string>
    <string name="new_video_wallpaper">新建视频壁纸</string>
    <string name="new_html_wallpaper">新建HTML壁纸</string>
    <string name="creating_new_wallpaper">正在新建</string>
    <string name="load_failed">在加载壁纸时出现错误</string>
    <string name="edit_wallpaper">编辑图片壁纸</string>
    <string name="edit_video_wallpaper">编辑视频壁纸</string>
    <string name="edit_html_wallpaper">编辑HTML壁纸</string>
    <string name="save_wallpaper">保存壁纸</string>
    <string name="apply_wallpaper">应用壁纸</string>
    <string name="delete_wallpaper">删除壁纸</string>
    <string name="update_wallpaper">更新壁纸</string>
    <string name="confirm_delete">确认删除壁纸吗？</string>
    <string name="choose_image">选择图片</string>
    <string name="choose_video">选择视频</string>
    <string name="choose_video_failed">选择视频时出现错误。</string>
    <string name="choose_image_failed">选择图片时出现错误</string>
    <string name="copying_image">正在复制图片……</string>
    <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
    <string name="warning_of_choose_video">注意：对于视频，因其体积过大，壁纸只会存储其路径。这意味着，若您移动、重命名（无论是重命名视频本身还是父文件夹），都会导致壁纸失效。</string>
    <string name="wallpaper_name">壁纸名</string>
    <string name="alpha">不透明度</string>
    <string name="fill_method">壁纸填充方法</string>
    <string name="position">壁纸位置</string>
    <string name="save_successfully">保存成功。</string>
    <string name="save_failed">在保存时出现了错误。</string>
    <string name="confirm_apply">确认应用</string>
    <string name="show_system_app">显示系统应用</string>
    <string name="apply_successful">应用成功。</string>
    <string name="confirm_cancel_apply">确认取消应用吗？</string>
    <string name="current_wallpaper_list_tip">短按以查看详情，长按以取消应用。</string>
    <string name="accessibility_description">这是BlueGrape运行的必要权限，用于检测当前位于哪个窗口，以决定播放哪个壁纸。</string>
    <string name="accessibility_permission_requests">程序需要无障碍权限以获取当前正在使用的应用后决定是否显示壁纸以及显示哪个壁纸，请在列表中找到“BlueGrape”后手动开启权限。</string>
    <string name="accessibility_permission_requests_on_close">Android系统关闭了程序的无障碍权限，这有可能不是您的本意。打开无障碍权限设置吗？ 请在列表中找到“BlueGrape”后手动开启权限。 如果您觉得这个对话框弹出太频繁，可以停止BlueGrape运行。</string>
    <string name="overlay_permission_requests">程序需要“在应用上层显示”权限以显示壁纸。请授权。</string>
    <string name="check_update">检查更新</string>
    <string name="checking_update">正在检查更新，点击空白处可取消。</string>
    <string name="feedback">意见反馈</string>
    <string name="using_document">使用文档</string>
    <string name="open_web">打开官网</string>
    <string name="crash_deliberate">崩溃测试</string>
    <string name="crash_deleberate_description">崩溃测试用于故意触发崩溃以上传日志至Bugly，仅在软件出现问题时使用。</string>
    <string name="reward_and_contribution">赞赏与贡献</string>
    <string name="info_text_load_failed">壁纸加载失败。</string>
    <string name="gif_unsupported">不支持GIF。但这个网站可能对您有所帮助：</string>
    <string name="input_url">输入壁纸URL</string>
    <string name="OK">好的</string>
    <string name="CANCEL">取消</string>
    <string name="CONFIRM">确定</string>
    <string name="confirm_download_under_4g">注意，您正处于移动数据网络下，继续下载会消耗流量。真的要继续吗？（土豪请自便）</string>
    <string name="wallpaper_download_task">壁纸下载程序</string>
    <string name="downloading_wallpaper">壁纸正在下载中……</string>
    <string name="download_canceled">壁纸下载已取消。</string>
    <string name="download_failed">下载壁纸时出现了错误。</string>
    <string name="unzip_failed">解压壁纸时遇到了错误，也许壁纸还能用。</string>
    <string name="settings">设置</string>
    <string name="settings_save_successfully">保存设置成功。</string>
    <string name="settings_save_failed">保存设置失败。</string>
    <string name="apk_download_task">安装包下载程序</string>
    <string name="downloading_apk">安装包正在下载中……</string>
    <string name="download_apk_failed">安装包下载失败。</string>
    <string name="download_apk_canceled">安装包下载已取消。</string>
    <string name="crash_message">抱歉，BlueGrape遇到了错误。联网情况下，Bugly插件会上传错误详情以帮助开发者修复问题。您可以联系哔哩哔哩@cyrxdzj。另外，请查看官网，也许上面有修复了这个BUG的版本更新。</string>
    <string name="filling_left_right">左右填充</string>
    <string name="filling_top_bottom">上下填充</string>
    <string name="position_left_top">左/上位置</string>
    <string name="position_right_bottom">右/下位置</string>
    <string name="reward">赞赏</string>
    <string name="contribution">贡献</string>
    <string name="about_text_1">BlueGrape是开源软件，开源代码托管于Gitee和Github上。若您是开源开发者，欢迎前来提交ISSUE或Pull Requests。</string>
    <string name="about_text_2">记得给一个Star和Watch哦~</string>
    <string name="url_website">官网地址</string>
    <string name="url_opensrc_repo">开源仓库地址</string>
    <string name="current_version">当前版本</string>
    <string name="latest_version">最新版本</string>
    <string name="do_update_question">是否更新？</string>
</resources>