<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutThisSoftware">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/reward_and_contribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reward_and_contribution"
        android:text="@string/reward_and_contribution"
        app:layout_constraintTop_toBottomOf="@+id/build_time"
        tools:layout_editor_absoluteX="157dp" />

    <Button
        android:id="@+id/check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="check_update"
        android:text="@string/check_update"
        app:layout_constraintTop_toBottomOf="@+id/using_document"
        tools:layout_editor_absoluteX="193dp" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="feedback"
        android:text="@string/feedback"
        app:layout_constraintTop_toBottomOf="@+id/open_web"
        tools:layout_editor_absoluteX="160dp" />

    <TextView
        android:id="@+id/build_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/app_version"
        tools:layout_editor_absoluteX="105dp" />

    <Button
        android:id="@+id/using_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="using_document"
        android:text="@string/using_document"
        app:layout_constraintTop_toBottomOf="@+id/feedback" />

    <Button
        android:id="@+id/open_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="open_web"
        android:text="@string/open_web"
        app:layout_constraintTop_toBottomOf="@+id/reward_and_contribution"
        tools:layout_editor_absoluteX="120dp" />

</androidx.constraintlayout.widget.ConstraintLayout>