<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/my_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_wallpaper"
        android:onClick="open_my_wallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/current_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_wallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_wallpaper" />

    <Button
        android:id="@+id/about_this_software"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this_software"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_wallpaper" />
</androidx.constraintlayout.widget.ConstraintLayout>